--- a/styles-sep2021.css
+++ b/styles-sep2021.css
@@ -59,7 +59,9 @@
     min-height: 8px;
   }
 
+
   /**🍎*****Background Blurs*****🍎**/
+  /*
   .header-bg{
     position: relative;
     width: 100%;
@@ -96,13 +98,13 @@
       opacity: 0.2;
     }
 
-
+*/
   /**🍎*****Header*****🍎**/
 
   .header{
     position: relative;
     align-items: center;
-    height: 100%;
+    height: 200px;
     width: 100%;
     z-index: 1;
   }
@@ -110,7 +112,6 @@
 
   .header-welcome-message{
     position: relative;
-    top: -300px;
     margin-left: auto;
     margin-right: auto;
     width: 300px;
@@ -159,7 +160,6 @@
   /**🍎*****Header roles*****🍎**/
   .header-roles{
     position: relative;
-    top: -300px;
     width: 300px;
     margin-left: auto;
     margin-right: auto;
@@ -208,7 +208,8 @@
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    top: -250px;
+    top: 50px;
+    height: 200px;
 
     font-family: "IvyPresto Display", serif;
     font-weight: 100;
@@ -462,7 +463,9 @@ footer .footer-credit{
       visibility: visible;
     }
 
+
 /**🍎*****Background Blurs*****🍎**/
+/*
 .header-bg{
   position: relative;
   width: 100%;
@@ -499,26 +502,25 @@ footer .footer-credit{
   .opacity-20{
     opacity: 0.2;
   }
-
+*/
 
 /**🍎*****Header*****🍎**/
 
 .header{
   position: relative;
   align-items: center;
-  height: 100%;
   width: 100%;
   z-index: 1;
+
 }
 
 
 .header-welcome-message{
   position: relative;
-  top: -350px;
   margin-left: auto;
   margin-right: auto;
   width: 550px;
-
+  height: 400px;
   font-family: "IvyPresto Display", serif;
   font-weight: 100;
   font-style: italic;
@@ -573,13 +575,14 @@ footer .footer-credit{
 /**🍎*****Header roles*****🍎**/
 .header-roles{
   position: relative;
-  top: -350px;
+  height: 220px;
   left: 170px;
   width: 1200px;
   margin-left: auto;
   margin-right: auto;
   align-items: center;
   z-index: 2;
+
 }
 
 .header-subtitle{
@@ -658,7 +661,7 @@ a:hover{
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  top: -200px;
+  height: 200px;
 
   font-family: "IvyPresto Display", serif;
   font-weight: 100;
@@ -695,7 +698,7 @@ a:hover{
 .work-section{
   width: 80vw;
   max-width: 900px;
-  min-height: auto;
+  height: auto;
   display: flex;
   flex-direction: column;
   margin-left: auto;
